--- a/pom.xml
+++ b/pom.xml
@@ -35,10 +35,17 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.33</version>
+        </dependency>
+        <!--
+        <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>9.3-1100-jdbc4</version>
         </dependency>
+        -->
         <dependency>
             <groupId>javax.servlet.jsp.jstl</groupId>
             <artifactId>javax.servlet.jsp.jstl-api</artifactId>
@@ -56,8 +63,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.6</source>
+                    <target>1.6</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -73,11 +80,20 @@
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
+                <!-- UiB tomcat server -->
+                <configuration>
+                    <url>http://alster.uib.no:8080/manager/text</url>
+                    <server>inf319Repo</server>
+                    <path>/TableTennisELO</path>
+                </configuration>
+                <!-- Local Tomcat server -->
+                <!--
                 <configuration>
                     <url>http://127.0.0.1:8080/manager/text</url>
                     <server>inf319LocalRepo</server>
                     <path>/BordtennisELO</path>
                 </configuration>
+                -->
             </plugin>
             <plugin>
                 <groupId>org.pitest</groupId>
