--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,50 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee"
-    xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-    version="3.0">
-    <display-name>TableTennisELO</display-name>
-    <welcome-file-list>
-        <welcome-file>Home</welcome-file>
-    </welcome-file-list>
-    <filter-mapping>
-        <filter-name>encodingFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
-    <filter-mapping>
-        <filter-name>updateSessionPlayerFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
-    <filter-mapping>
-        <filter-name>lockedPlayerFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
-    <filter-mapping>
-        <filter-name>adminFilter</filter-name>
-        <url-pattern>/Admin</url-pattern>
-        <url-pattern>/AdminPlayerList</url-pattern>
-        <url-pattern>/AdminEditPlayer</url-pattern>
-        <url-pattern>/AdminLockPlayer</url-pattern>
-        <url-pattern>/AdminRemovePlayer</url-pattern>
-        <url-pattern>/AdminMatchList</url-pattern>
-        <url-pattern>/AdminAddMatch</url-pattern>
-        <url-pattern>/AdminEditMatch</url-pattern>
-        <url-pattern>/AdminRemoveMatch</url-pattern>
-        <url-pattern>/AdminEditInactiveLimit</url-pattern>
-    </filter-mapping>
-    <context-param>
-        <description>Location to store uploaded file</description>
-        <param-name>fileUpload</param-name>
-        <param-value>/usr/share/tomcat/webapps/TableTennisData/profile/</param-value>
-    </context-param>
-    <context-param>
-        <description>Location of uploaded images in webapps dir</description>
-        <param-name>imageWebDir</param-name>
-        <param-value>/TableTennisData/profile/</param-value>
-    </context-param>
-    <context-param>
-        <description>Location of webapps dir</description>
-        <param-name>webDirPath</param-name>
-        <param-value>/usr/share/tomcat/webapps</param-value>
-    </context-param>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
+  <display-name>TableTennisELO</display-name>
+  <welcome-file-list>
+    <welcome-file>Home</welcome-file>
+  </welcome-file-list>
+  <filter-mapping>
+    <filter-name>encodingFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  <filter-mapping>
+    <filter-name>updateSessionPlayerFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  <filter-mapping>
+    <filter-name>lockedPlayerFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  <filter-mapping>
+    <filter-name>adminFilter</filter-name>
+    <url-pattern>/Admin</url-pattern>
+    <url-pattern>/AdminPlayerList</url-pattern>
+    <url-pattern>/AdminEditPlayer</url-pattern>
+    <url-pattern>/AdminLockPlayer</url-pattern>
+    <url-pattern>/AdminRemovePlayer</url-pattern>
+    <url-pattern>/AdminMatchList</url-pattern>
+    <url-pattern>/AdminAddMatch</url-pattern>
+    <url-pattern>/AdminEditMatch</url-pattern>
+    <url-pattern>/AdminRemoveMatch</url-pattern>
+    <url-pattern>/AdminEditInactiveLimit</url-pattern>
+  </filter-mapping>
+  <context-param>
+    <description>Location to store uploaded file</description>
+    <param-name>fileUpload</param-name>
+    <param-value>/usr/share/tomcat/webapps/TableTennisData/profile/</param-value>
+  </context-param>
+  <context-param>
+    <description>Location of uploaded images in webapps dir</description>
+    <param-name>imageWebDir</param-name>
+    <param-value>/TableTennisData/profile/</param-value>
+  </context-param>
+  <context-param>
+    <description>Location of webapps dir</description>
+    <param-name>webDirPath</param-name>
+    <param-value>/usr/share/tomcat/webapps</param-value>
+  </context-param>
 </web-app>
